--- a/style/style.css
+++ b/style/style.css
@@ -1,12 +1,16 @@
 body {
+    background-color: #02182B;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
 .header {
-    display: flex;
     background-color: #D7263D;
+    display: flex;
+    align-items: center;
+    padding-left: 25px;
+    height: 8vh;
 
 }
 
@@ -16,20 +20,36 @@ h1 {
 
 
 .container {
-    background-color: #02182B;
+    
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    height: 100vh;
-    width: 100vw;
+    height: 92vh;
     z-index: 0;
 }
 
-.contact-container {
-    margin-top: 100px;
+.contact {
+    background-color: grey;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: grey;
+    align-items: center;
+    border-radius: 20px;
+    padding: 20px;
+    margin: 20px 20px 0px 20px;
+    height: 5vh;
     z-index: 1;
+}
+
+.contact-info {
+    background-color: grey;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 20px;
+    padding: 20px;
+    margin: -15px 25px 0px 25px;
+    height: 6vh;
+    z-index: 1;
+
 }
